// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.update data alone still works 1`] = `
{
  "sql": "UPDATE Foo2 AS Foo2 SET ID=?,name=?,a=?",
  "values": [
    1,
    null,
    null,
  ],
}
`;

exports[`.update set enhances data 1`] = `
{
  "sql": "UPDATE Foo2 AS Foo2 SET a=?,ID=?,name=?",
  "values": [
    2,
    1,
    "'asd'",
  ],
}
`;

exports[`.update set overwrites data 1`] = `
{
  "sql": "UPDATE Foo2 AS Foo2 SET a=?,ID=?,name=?,a=?",
  "values": [
    2,
    1,
    "'asd'",
    6,
  ],
}
`;

exports[`.update test with entity and values with operators 1`] = `
{
  "sql": "UPDATE Foo2 AS Foo2 SET ID=?,name=?,a=Foo2.a - ?",
  "values": [
    42,
    "'asd'",
    1,
  ],
}
`;

exports[`.update test with entity of type string 1`] = `
{
  "sql": "UPDATE Foo2 AS Foo2 SET ID=?,name=?,a=?",
  "values": [
    1,
    "'asd'",
    2,
  ],
}
`;

exports[`.update test with entity of type string and where clause 1`] = `
{
  "sql": "UPDATE Foo2 AS Foo2 SET ID=?,name=?,a=? WHERE Foo2.a < ?",
  "values": [
    1,
    "'asd'",
    2,
    9,
  ],
}
`;

exports[`.update test with setting a value to null 1`] = `
{
  "sql": "UPDATE Foo2 AS Foo2 SET ID=?,name=?,a=? WHERE Foo2.a < ?",
  "values": [
    1,
    null,
    2,
    9,
  ],
}
`;

exports[`.update test with subselect - sflight example 1`] = `
{
  "sql": "UPDATE Travel AS Travel SET TotalPrice=coalesce(BookingFee,0) + (SELECT coalesce(sum(FlightPrice + (SELECT coalesce(sum(Price),0) as coalesce FROM BookingSupplement WHERE to_Booking_BookingUUID = BookingUUID)),0) as coalesce FROM Booking WHERE to_Travel_TravelUUID = TravelUUID)",
  "values": [],
}
`;

exports[`.update virtual and non-existing fields filtered out from with 1`] = `
{
  "sql": "UPDATE Foo2 AS Foo2 SET ID=?,name=?",
  "values": [
    1,
    "'asd'",
  ],
}
`;

exports[`.update virtual and non-existing filtered out from data 1`] = `
{
  "sql": "UPDATE Foo2 AS Foo2 SET ID=?",
  "values": [
    1,
  ],
}
`;
